added more implementation todos

--- a/03_continuous_integration/03_continuous_integration.ipynb
+++ b/03_continuous_integration/03_continuous_integration.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# The Continuous Integration Course "
+    "# The API & Docker course"
    ]
   },
   {
@@ -45,12 +45,12 @@
     "\n",
     "For this part, you need to have a GitHub acount. I highly recommend to use GitKraken as your UI for git commands.\n",
     "\n",
-    "## Part 1: repository setup\n",
+    "## Implementation Part 1: repository setup\n",
     "\n",
     "1. Create a GitHub repository name `iris-api`\n",
     "2. Add a .gitignore for python codes\n",
     "3. Clone the repository on your computer\n",
-    "4. copy the content of the iris-api to your folder\n",
+    "4. copy the content of the iris-api to your folder https://github.com/Mu-DS/practical_training/tree/master/03_continuous_integration/iris-api\n",
     "5. commit and push\n",
     "\n",
     "\n",
@@ -83,7 +83,34 @@
     "Example: A client (browser) sends an HTTP request to the server; then the server returns a response to the client. The response contains status information about the request and may also contain the requested content.\n",
     "\n",
     "\n",
-    "https://www.w3schools.com/tags/ref_httpmethods.asp"
+    "https://www.w3schools.com/tags/ref_httpmethods.asp\n",
+    "\n",
+    "## HTTP Status codes\n",
+    "\n",
+    "- 200 OK\n",
+    "- 400 Bad request\n",
+    "- 500 Internal Server Error\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/List_of_HTTP_status_codes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false",
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Web-framework for open science access\n",
+    "\n",
+    "Frameworks:\n",
+    "\n",
+    "- Flask\n",
+    "- Django\n",
+    "- Bottle\n",
+    "- Falcon (we use this one!) [https://falcon.readthedocs.io/en/stable/]"
    ]
   },
   {
@@ -149,14 +176,11 @@
     }
    },
    "source": [
-    "## Part 2: Functions for prediction\n",
+    "## Implementation 2: Coding part\n",
     "\n",
-    "For creating the api, we need these functions\n",
+    "There are missing parts in '/resources/IrisPredictorResource.py'.\n",
     "\n",
-    "1. function that check the correctness of the input dict\n",
-    "2. function that pass the data to the model to and received the prediction\n",
-    "\n",
-    "Each function has to be have docstrings as well as a test."
+    "Finish the code with your teammate"
    ]
   },
   {
@@ -168,13 +192,8 @@
     }
    },
    "source": [
-    "### Part 3: code structure\n",
+    "### API structure\n",
     "\n",
-    "For this part, we create a python package which will be used for the docker later\n",
-    "\n",
-    "1. create a folder called `resources`\n",
-    "3. create a folder called `tests`. From now on, we put all the tests there.\n",
-    "4. create a folder called `bin`\n",
     "\n",
     "The structure of the root folder should look like this:\n",
     "\n",
@@ -212,48 +231,6 @@
     }
    },
    "source": [
-    "## Web-framework for open science access\n",
-    "\n",
-    "Frameworks:\n",
-    "\n",
-    "- Flask\n",
-    "- Django\n",
-    "- Bottle\n",
-    "- Falcon (we use this one!) [https://falcon.readthedocs.io/en/stable/]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the `on_post` method, you should receive the HTTP request and send back the results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Also, create file called `main.py` and initialize the IrisPredictor with falcon"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Docker\n",
     "\n",
     "Developing apps today requires so much more than writing code. Multiple languages, frameworks, architectures, and discontinuous interfaces between tools for each lifecycle stage creates enormous complexity. Docker simplifies and accelerates your workflow, while giving developers the freedom to innovate with their choice of tools, application stacks, and deployment environments for each project.\n",
@@ -270,28 +247,78 @@
     }
    },
    "source": [
-    "## Docker\n",
+    "## Implementation 3: Docker part\n",
     "\n",
     "We use Docker as our container. Also, we use gunicorn for handling the calls.\n",
+    "https://gunicorn.org/\n",
     "\n",
-    "1. Create a Docker file and add the necessary requirments there. \n",
-    "2. Install the Docker\n",
+    "1. Finilize the docker file '/Dockerfile'.\n",
+    "2. Install the Docker using the readme\n",
     "3. Run the Docker\n",
-    "4. Write the documentation for the Docker"
+    "4. test the docker using curl command\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false",
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "## API\n",
+    "## GitHub Apps for CI\n",
     "\n",
-    "Now test the API"
+    "You can use different github apps for your code quality\n",
+    "\n",
+    "here we use Travis & Codacy Production\n",
+    "\n",
+    "Travis CI: https://travis-ci.org/\n",
+    "\n",
+    "Codacy: https://codacy.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Implementation 4: Add unit testing\n",
+    "\n",
+    "Add different test scenarios for your functions to check if everything is alright\n",
+    "\n",
+    "Add this unittests in '/tests/' folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Implementation 5: CI apps\n",
+    "\n",
+    "Log in to Travis and Codacy and connect them to your github account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Implementation 6: travis\n",
+    "\n",
+    "add this content to '.travis.yml' file\n",
+    "\n",
+    "'''ya,\n",
+    "'''"
    ]
   }
  ],
