--- a/03_continuous_integration/03_continuous_integration.ipynb
+++ b/03_continuous_integration/03_continuous_integration.ipynb
@@ -317,7 +317,18 @@
     "\n",
     "add this content to '.travis.yml' file\n",
     "\n",
-    "'''ya,\n",
+    "'''yaml\n",
+    "os:\n",
+    "  - linux\n",
+    "\n",
+    "language: python\n",
+    "\n",
+    "python:\n",
+    "  - \"3.6\"\n",
+    "  - \"3.7\"\n",
+    "\n",
+    "script:\n",
+    "  - pytest\n",
     "'''"
    ]
   }
