updates slurm and snakeamke

--- a/04_best_practices/slurm.ipynb
+++ b/04_best_practices/slurm.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Slurm\n",
     "Slurm is a widely used cluster manager and job scheduling system. It's used to submit jobs in an HPC system.  "
@@ -10,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### First contact with Slurm\n",
     "Basic commands to communicate with the cluster are:\n",
@@ -21,7 +29,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## How does the cluster look like\n",
     "We can use `sinfo` to get a glimpse of the cluster structure:\n",
@@ -42,7 +54,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## What are the running jobs?\n",
     "We can use `squeue` to get that info\n",
@@ -57,7 +73,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## How about a specific job?\n",
     "We can look at specific jobs with `scontrol show jobid [JOBID]`\n",
@@ -98,14 +118,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Establish an interactive slurm session\n",
     "```bash\n",
     "srun -p icb_interactive -w ibis216-010-022 -c 1 -t 00:15:00 --mem=200 --pty bash\n",
     "```\n",
     "\n",
-    "The `--pty` is used to assign the commmand. In this case, we just want to get a bash terminal. One way I often use this is\n",
+    "The `--pty` is used to assign the commmand. In this case, we just want to get a bash terminal. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "One way I often use this is\n",
     "```bash\n",
     "(base) [giovanni.palla@vicb-submit-02 cpu_interactive]$ srun -p icb_gpu -w icb-gpusrv03 --pty nvidia-smi\n",
     "Thu Sep 10 13:11:07 2020\n",
@@ -130,20 +165,18 @@
     "|    1     60098      C   python                                     11993MiB |\n",
     "+-----------------------------------------------------------------------------+\n",
     "```\n",
-    "Very useful if you want to get quick info on efficiency of gpu usage etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Guidelines for srun\n",
+    "Very useful if you want to get quick info on efficiency of gpu usage etc.\n",
+    "\n",
     "In general, always be specific with the arguments, although it's true that slurm systems usually have sound defaults values."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## More on sbatch\n",
     "`sbatch` is useful to submit scripts as jobs. Usually, you have interactive sessions with `srun` for prorotyping, but then you want to use `sbatch` for the major computation. Argemunts are exactly the same as `srun`, but specified differently.\n",
@@ -172,11 +205,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Interactive session with sbatch\n",
-    "In a typical datascience workflow, you might want to start your coding with a jupyter instance. This is a way to do it.  \n",
-    "\n",
+    "In a typical datascience workflow, you might want to start your coding with a jupyter instance. This is a way to do it.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Create a script `submit_interactive.sh` that looks like this:\n",
     "```bash\n",
     "#!/bin/bash\n",
@@ -191,8 +237,17 @@
     "#SBATCH --nice=10000\n",
     "\n",
     "./run_jupyter.bash -e myenv\n",
-    "```  \n",
-    "\n",
+    "```  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "and another script `run_jupyter.bash`, that looks like this:\n",
     "```bash\n",
     "#!/bin/bash\n",
@@ -216,7 +271,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Interactive session with sbatch\n",
     "After ~30 seconds, you will read the link for the jupyter session in the `.err` file\n",
@@ -241,7 +300,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Another command: sacct\n",
     "Useful to check all your recent jobs (finished, cancelled, etc)\n",
