added info for flask

--- a/03_continuous_integration/03_continuous_integration.ipynb
+++ b/03_continuous_integration/03_continuous_integration.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "Frameworks:\n",
     "\n",
-    "- Flask\n",
+    "- Flask [https://flask.palletsprojects.com/en/1.1.x/tutorial/] [https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world]\n",
     "- Django\n",
     "- Bottle\n",
     "- Falcon (we use this one!) [https://falcon.readthedocs.io/en/stable/]"
@@ -331,6 +331,13 @@
     "  - pytest\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
