fix snakemake and slurm

--- a/04_best_practices/snakemake.ipynb
+++ b/04_best_practices/snakemake.ipynb
@@ -55,7 +55,7 @@
     }
    },
    "source": [
-    "### But first, some spicy memes/twitter threads:\n",
+    "### But first, a spicy twitter thread:\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -73,7 +73,7 @@
     }
    },
    "source": [
-    "### More memes\n",
+    "### More \n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -134,17 +134,7 @@
     "### Wildcards\n",
     "\n",
     "Wildcards are the core ingredient of snakemake. They essentially represents the keys around which the pipeline (the DAG) is built.  \n",
-    "<img src=\"https://snakemake.readthedocs.io/en/stable/_images/dag_call.png\" width=500 />\n",
-    "\n",
-    "Notice that the `rule all`, used to build the DAG, is the same in both cases.\n",
-    "\n",
-    "```python\n",
-    "rule all\n",
-    "    expand(PATH+\"/{n_features}_{{hv}}_{{dataset}}.h5ad\", \n",
-    "           n_features = N_FEATURES_LIST,\n",
-    "           hv = HV_LIST,\n",
-    "           dataset = DATASET_LIST)\n",
-    "```"
+    "<img src=\"https://snakemake.readthedocs.io/en/stable/_images/dag_call.png\" width=500 />\n"
    ]
   },
   {
@@ -204,7 +194,7 @@
    },
    "source": [
     "### Wildcards and expand\n",
-    "Now, let's say that I actually want to run `script.py` only Z times, where `Z = sum( n_features, dataset)`, but of course still outputing X files. Then we would use expand, and make it escape the wildcards.\n",
+    "Now, let's say that I actually want to run `script.py` only Z times, where `Z = sum(hv, dataset)`, but of course still outputing X files. Then we would use expand, and make it escape the wildcards.\n",
     "\n",
     "```python\n",
     "rule FEATURE SELECTION:\n",
@@ -217,6 +207,21 @@
     "        PATH + \"/myenv.yml\"\n",
     "    script:\n",
     "        PATH + \"/script.py\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rule all is the same\n",
+    "\n",
+    "```python\n",
+    "rule all\n",
+    "    expand(PATH+\"/{n_features}_{hv}_{dataset}.h5ad\", \n",
+    "           n_features = N_FEATURES_LIST,\n",
+    "           hv = HV_LIST,\n",
+    "           dataset = DATASET_LIST)\n",
     "```"
    ]
   },
